--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,90 @@ body {
   margin: 0;
   padding-top: 20px;
   text-align: center;
-
+  font-size: larger;
 }
+
+body {
+  background-color: rgb(0, 0, 0);
+}
+
+div {
+  margin: 0 1em;
+}
+.main{
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr;
+  place-items:initial;
+  border-color: #fff;
+}
+
+section {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 13rem;
+}
+
+.btn {
+  padding: 1em 2em;
+  background-color: #c50e0e;
+  border: none;
+  user-select: none;
+  cursor: pointer;
+  font-size: 20px;
+  text-transform: uppercase;
+  transition: all 0.5s linear;
+  color: #fff;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.btn:hover {
+  background-color:#271111;
+  border-radius: 0;
+  scale: 1.1;
+}
+
+.btn::after{
+  content: '';
+  background: #c50e0e;
+  width: 0;
+  height: 100%;
+  position: absolute;
+  inset: 0;
+  transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
+  z-index: -1;    
+}
+
+.btn:hover::after {
+  width: 100%;
+}
+
+.two::after {
+  transform: translateX(-100%);
+  transition: all 0.5s ease;
+  visibility: hidden;
+}
+
+.two:hover::after {
+      visibility: visible;
+      transform: translateX(0);
+}
+
+.three::after {
+  transition: all 0.5s linear;
+}
+
+/* .four::after {
+  transition: all 0.5s linear;
+  transform: translateX(-100px);
+  opacity: 0;
+}
+
+.four:hover::after {
+  transform: translateX(0);
+  opacity: 1;
+} */
 /* .container {
   width: 90%;
   max-width: 1200px;
