--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,14 @@
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 100%;
+}
+
+body {
+  overflow-x: hidden; /* prevents horizontal scroll */
+}
