--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Times New Roman", serif;
-  background-color: #111;
+  background-color: #1a1a1a;
   color: #fff;
   line-height: 1.6;
 }
@@ -23,6 +23,10 @@ body {
   letter-spacing: 2px;
   color: #fff;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+}
+
+.title h2 span {
+  color: #c50e0e;
 }
 
 /* Navigation Section */
